namespace DomainModels;

public class Guest
{
    public void SignUp()
    {
        
    }
    
    public void Login()
    {
        
    }
}